[gd_scene load_steps=9 format=3 uid="uid://d1btmaiyutjq0"]

[ext_resource type="Script" path="res://Scripts/game_over_screen.gd" id="1_nnwtk"]
[ext_resource type="FontFile" uid="uid://diwy0e3rphryp" path="res://Assets/Fonts/Round9x13.ttf" id="2_rkoxy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8swet"]
bg_color = Color(0.0368821, 0.339015, 0.486526, 0.392157)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_1a0y8"]
font = ExtResource("2_rkoxy")
font_size = 36
font_color = Color(0.784314, 0.294118, 0.6, 1)
shadow_size = 3
shadow_color = Color(0.188235, 0.458824, 0.333333, 1)
shadow_offset = Vector2(1.5, -2.5)

[sub_resource type="Animation" id="Animation_ghtbh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_4ix7e"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_c0mlu"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3pfxp"]
_data = {
"RESET": SubResource("Animation_ghtbh"),
"fade_in": SubResource("Animation_4ix7e"),
"fade_out": SubResource("Animation_c0mlu")
}

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nnwtk")

[node name="GameOverPanel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Panel" type="Panel" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.512
anchor_top = 0.436
anchor_right = 0.512
anchor_bottom = 0.436
offset_left = -118.08
offset_top = -159.76
offset_right = 117.92
offset_bottom = 160.24
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8swet")

[node name="TitleMarginContainer" type="MarginContainer" parent="GameOverPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.0
offset_top = 64.0
offset_right = 101.0
offset_bottom = 136.0
grow_horizontal = 2

[node name="TitleVBoxContainer" type="VBoxContainer" parent="GameOverPanel/Panel/TitleMarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Title1" type="Label" parent="GameOverPanel/Panel/TitleMarginContainer/TitleVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "GAME OVER
"
label_settings = SubResource("LabelSettings_1a0y8")

[node name="GameOvertMarginContainer" type="MarginContainer" parent="GameOverPanel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.576
anchor_top = 0.725
anchor_right = 0.576
anchor_bottom = 0.725
offset_left = -159.936
offset_top = -64.0
offset_right = 129.064
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 0

[node name="GameOverHVBoxContainer" type="HBoxContainer" parent="GameOverPanel/Panel/GameOvertMarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="HomeButton" type="Button" parent="GameOverPanel/Panel/GameOvertMarginContainer/GameOverHVBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_color = Color(0.576471, 0.329412, 0.054902, 0.854902)
theme_override_colors/font_pressed_color = Color(0.188235, 0.458824, 0.333333, 0.854902)
theme_override_colors/font_hover_color = Color(0.577282, 0.328601, 0.0539305, 0.854902)
theme_override_colors/font_focus_color = Color(0.188235, 0.458824, 0.333333, 0.854902)
theme_override_fonts/font = ExtResource("2_rkoxy")
theme_override_font_sizes/font_size = 21
text = "HOME"
flat = true
icon_alignment = 1

[node name="ReplayButton" type="Button" parent="GameOverPanel/Panel/GameOvertMarginContainer/GameOverHVBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_color = Color(0.577282, 0.328601, 0.0539305, 0.854902)
theme_override_colors/font_pressed_color = Color(0.188235, 0.458824, 0.333333, 0.854902)
theme_override_colors/font_hover_color = Color(0.577282, 0.328601, 0.0539305, 0.854902)
theme_override_colors/font_focus_color = Color(0.188235, 0.458824, 0.333333, 0.854902)
theme_override_fonts/font = ExtResource("2_rkoxy")
theme_override_font_sizes/font_size = 20
text = "REPLAY"
flat = true
icon_alignment = 1

[node name="FadeTransition" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeTransition"]
libraries = {
"": SubResource("AnimationLibrary_3pfxp")
}

[node name="FadeTimer" type="Timer" parent="FadeTransition"]

[connection signal="pressed" from="GameOverPanel/Panel/GameOvertMarginContainer/GameOverHVBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="GameOverPanel/Panel/GameOvertMarginContainer/GameOverHVBoxContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="timeout" from="FadeTransition/FadeTimer" to="." method="_on_fade_timer_timeout"]
